# planetary-interiors

./: .gitignore  README.md  pyproject.toml
model/: __init__.py  density.py  minerals.py  sphere.py
model/data/: core_yoshizaki_2020.csv  density_brennan_2020.csv
notebooks/: 01_initial_analysis.ipynb  interpolate_density.ipynb
tests/: test_density.py  test_minerals.py  test_sphere.py
tests/data/: test_bsm.csv
