[tool.poetry]
name = "model"
version = "0.1.0"
description = ""
authors = ["Tom Taylor <tom@tom.dev>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.11"
pandas = "^2.1.3"
numpy = "^1.26.2"
scipy = "^1.11.3"
matplotlib = "^3.8.1"
jupyter = "^1.0.0"
qdldl = "^0.1.7.post0"
burnman = "^1.2.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
black = {extras = ["jupyter"], version = "^23.11.0"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
